# hugin_panorama

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
launch/: hugin_panorama.launch  image_saver.launch  stitch_loop.launch
nodes/: hugin_panorama
scripts/: stitch_loop.py
src/hugin_panorama/: hugin_panorama.py
